--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,6 @@
     <property name="lib.dir"   value="lib"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
-    <property name="main-class"  value="ws.chess.RunSimpleChessCore"/>
 
     <target name="clean">
         <delete dir="${build.dir}"/>
@@ -13,23 +12,23 @@
     </target>
 
     <target name="resolve">
-        <ivy:retrieve/>
-        <ivy:cachepath pathid="lib.path"/>
+        <ivy:retrieve pattern="${lib.dir}/[artifact]-[type].[ext]"/>
     </target>
 
     <target name="compile" depends="resolve">
+        <path id="build-classpath">
+            <fileset dir="${lib.dir}">
+                <include name="*.jar"/>
+            </fileset>
+        </path>
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="lib.path"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="build-classpath" includeantruntime="false"/>
     </target>
 
     <target name="jar" depends="compile">
         <mkdir dir="${jar.dir}"/>
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <zipgroupfileset dir="${lib.dir}" includes="*.jar"/>
-            <manifest>
-                <attribute name="Main-Class" value="${main-class}"/>
-                <attribute name="Class-Path" value="lib/*.jar"/>
-            </manifest>
         </jar>
     </target>
 
